[workspace]
members  = ["server", "client-grpc"]
resolver = "2"

[workspace.package]
edition      = "2021"
homepage     = "https://www.arrowair.com/docs/documentation/services/intro"
license-file = "LICENSE"
repository   = "https://github.com/aetheric-oss/svc-storage"

categories = [
  "aerospace::drones",
  "aerospace::protocols",
] # max 5 -- https://crates.io/category_slugs
