[package]
description = "Arrow Storage service GRPC client"
keywords    = ["vtol", "client", "storage"]       # max 5
name        = "svc-storage-client-grpc"
version     = "0.10.1-develop.6"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

include = [
  "out/grpc/*.rs",
  "out/grpc/client/*.rs",
  "examples/**",
  "includes/**",
  "src/**",
  "tests/**",
]

[features]
dev = ["mock", "tokio", "all_resources", "svc-storage"]
mock = ["chrono", "rand", "geo"]
test_util = [
  "lib-common/grpc_mock",
  "mock",
  "svc-storage/mock_server",
  "tokio",
  "tower",
  "all_resources",
]
# Supported resources
adsb = ["any_resource"]
all_resources = [
  "adsb",
  "flight_plan",
  "itinerary",
  "parcel",
  "scanner",
  "pilot",
  "vehicle",
  "vertipad",
  "vertiport",
]
any_resource = []
flight_plan = ["any_resource"]
itinerary = ["any_resource", "flight_plan"]
parcel = ["any_resource"]
pilot = ["any_resource"]
scanner = ["any_resource"]
vehicle = ["any_resource"]
vertipad = ["any_resource", "vertiport"]
vertiport = ["any_resource"]
# Will implement mock functions for the client, only use for tests!
mock_client = [
  "lazy_static",
  "lib-common/grpc_mock",
  "svc-storage",
  "tokio",
  "tower",
]

[dependencies]
anyhow        = "1.0"
cfg-if        = "1.0"
chrono        = { version = "0.4", optional = true }
futures       = "0.3"
geo           = { version = "0.25", optional = true }
geo-types     = "0.7"
lazy_static   = { version = "1.4", optional = true }
log           = "0.4"
num-derive    = "0.3"
num-traits    = "0.2"
ordered-float = "3.3"
prost         = "0.11"
prost-types   = "0.11"
rand          = { version = "0.8", optional = true }
tonic         = "0.8"
tower         = { version = "0.4", optional = true }
uuid          = { version = "1.2", features = ["v4"] }

[dependencies.svc-storage]
optional = true
path     = "../server"

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "v0.1.1-develop.2"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
optional = true
version  = "1.28"

[dev-dependencies]
chrono      = "0.4"
futures     = "0.3"
lazy_static = "1.4"
logtest     = "2.0"
rand        = "0.8"

# Make sure we enable the required modules and have access to all resources when running tests
[dev-dependencies.svc-storage-client-grpc]
features = ["dev"]
path     = "."

[build-dependencies]
tonic-build = "0.8"

[[example]]
name              = "grpc"
required-features = ["all_resources", "mock"]
