[package]
description = "Arrow Storage service GRPC client"
keywords    = ["vtol", "client", "storage"]       # max 5
name        = "svc-storage-client-grpc"
version     = "0.10.1-develop.9"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

include = [
  "out/grpc/*.rs",
  "out/grpc/client/*.rs",
  "examples/**",
  "includes/**",
  "src/**",
  "tests/**",
]

[features]
dev       = ["mock", "all_resources", "svc-storage"]
test_util = ["mock", "stub_backends", "all_resources"]
# Supported resources
adsb = ["any_resource"]
all_resources = [
  "adsb",
  "flight_plan",
  "group",
  "itinerary",
  "parcel",
  "pilot",
  "scanner",
  "parcel_scan",
  "user",
  "vehicle",
  "vertipad",
  "vertiport",
]
any_resource = []
flight_plan = ["any_resource"]
group = ["any_resource"]
itinerary = ["any_resource", "flight_plan"]
parcel = ["any_resource"]
parcel_scan = ["any_resource", "scanner", "parcel"]
pilot = ["any_resource"]
scanner = ["any_resource"]
user = ["any_resource", "group"]
vehicle = ["any_resource"]
vertipad = ["any_resource", "vertiport"]
vertiport = ["any_resource"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = ["chrono", "rand", "geo"]
# Will use a stubbed server connection, only use for tests!
stub_backends = ["svc-storage/stub_server", "lib-common/grpc_mock", "tower"]
# Will implement stub functions for the client, only use for tests!
stub_client = ["lazy_static", "all_resources"]

[dependencies]
anyhow        = "1.0"
cfg-if        = "1.0"
chrono        = { version = "0.4", optional = true }
futures       = "0.3"
geo           = { version = "0.25", optional = true }
geo-types     = "0.7"
lazy_static   = { version = "1.4", optional = true }
log           = "0.4"
num-derive    = "0.3"
num-traits    = "0.2"
ordered-float = "3.3"
prost         = "0.11"
prost-types   = "0.11"
rand          = { version = "0.8", optional = true }
tonic         = "0.8"
tower         = { version = "0.4", optional = true }
uuid          = { version = "1.2", features = ["v4"] }

[dependencies.svc-storage]
optional = true
path     = "../server"

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "v0.1.1-develop.2"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version  = "1.28"

[dev-dependencies]
chrono      = "0.4"
futures     = "0.3"
lazy_static = "1.4"
logtest     = "2.0"
rand        = "0.8"

# Make sure we enable the required modules and have access to all resources when running tests
[dev-dependencies.svc-storage-client-grpc]
features = ["dev"]
path     = "."

[build-dependencies]
tonic-build = "0.8"

[[example]]
name              = "grpc"
required-features = ["all_resources", "mock"]
