[package]
description = "Aetheric Storage service GRPC client"
keywords    = ["vtol", "client", "storage"]          # max 5
name        = "svc-storage-client-grpc"
version     = "0.12.1"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

include = [
  "out/grpc/*.rs",
  "out/grpc/client/*.rs",
  "examples/**",
  "includes/**",
  "src/**",
  "tests/**",
]

[features]
dev              = ["mock", "all_resources", "svc-storage"]
test_util        = ["mock", "stub_backends", "all_resources"]
vendored-openssl = ["openssl/vendored"]
# Supported resources
adsb = ["any_resource"]
all_resources = [
  "adsb",
  "flight_plan",
  "flight_plan_parcel",
  "group",
  "itinerary",
  "parcel",
  "parcel_scan",
  "pilot",
  "scanner",
  "user",
  "vehicle",
  "vertipad",
  "vertiport",
]
# Indicates that at least 1 resource has been enabled
any_resource = []
# Available resources
flight_plan        = ["any_resource"]
flight_plan_parcel = ["any_resource", "flight_plan", "parcel"]
group              = ["any_resource", "user", "vehicle", "vertipad", "vertiport"]
itinerary          = ["any_resource", "flight_plan"]
parcel             = ["any_resource"]
parcel_scan        = ["any_resource", "scanner", "parcel"]
pilot              = ["any_resource"]
scanner            = ["any_resource"]
user               = ["any_resource", "group"]
vehicle            = ["any_resource"]
vertipad           = ["any_resource", "vertiport"]
vertiport          = ["any_resource"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = ["rand", "geo"]
# Will use a stubbed backend connection, only use for tests!
stub_backends = [
  "svc-storage/stub_server",
  "lib-common/grpc_mock",
  "tower",
  "hyper-util",
]
# Pass through stub_server feature for our server code
stub_server = ["stub_backends", "wkt"]
# Will implement stub functions for the client, only use for tests!
stub_client = [
  "lazy_static",
  "all_resources",
  "svc-storage",
  "paste",
  "futures",
  "wkt",
]

[dependencies]
anyhow          = "1.0"
cfg-if          = "1.0"
futures         = { version = "0.3", optional = true }
geo             = { version = "0.28", optional = true }
hyper-util      = { version = "0.1", optional = true }
lazy_static     = { version = "1.5", optional = true }
log             = "0.4"
num-derive      = "0.4"
num-traits      = "0.2"
ordered-float   = "4.3"
paste           = { version = "1.0", optional = true }
postgis         = "0.9"
prost           = "0.13"
prost-types     = "0.13"
prost-wkt-types = "0.6"
rand            = { version = "0.8", optional = true }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
tonic           = "0.12"
tower           = { version = "0.5", optional = true }
wkt             = { version = "0.11", optional = true }

[dependencies.svc-storage]
optional = true
path     = "../server"

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/aetheric-oss/lib-common"
tag      = "v3.0.0"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version  = "1.40"

[dependencies.utoipa]
version = "4.2"

[dev-dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.3"

[dev-dependencies]
ctor        = "0.2"
futures     = "0.3"
lazy_static = "1.5"
logtest     = "2.0"
openssl     = "0.10"
rand        = "0.8"

# Make sure we enable the required modules and have access to all resources when running tests
[dev-dependencies.svc-storage-client-grpc]
features = ["dev"]
path     = "."

[build-dependencies]
tonic-build = "0.12"

[[example]]
name              = "grpc"
required-features = ["all_resources", "mock"]

# https://github.com/xd009642/tarpaulin?tab=readme-ov-file#ignoring-code-in-files
# removes warnings introduced by rust 1.8
# can be removed when the cfg attributes can be replaced with `#[coverage(off)]` (currently only available in nightly)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
