[package]
description = "Arrow storage service GRPC server"
keywords    = ["vtol", "server", "storage"]       # max 5
name        = "svc-storage"
version     = "0.10.1-develop.18"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
default          = []
dev              = ["mock"]
test_util        = ["mock", "stub_backends"]
vendored-openssl = ["openssl/vendored"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = ["rand", "geo"]
# Will use a stubbed backend connection, only use for tests!
stub_backends = []
# Will implement stub functions for the server, only use for tests!
stub_server = ["test_util"]
# Only added to support client-grpc feature when running tests
stub_client = ["stub_backends"]

[dependencies]
anyhow              = "1.0"
byteorder           = "1.4"
bytes               = "1.0"
cargo-husky         = "1"
cfg-if              = "1.0"
chrono              = { version = "0.4", features = ["serde"] }
clap                = { version = "4.0", features = ["derive"] }
config              = "0.13"
deadpool            = "0.9"
deadpool-postgres   = { version = "0.10", features = ["serde", "rt_tokio_1"] }
dotenv              = "0.15"
futures             = "0.3"
geo                 = { version = "0.25", optional = true }
geo-types           = "0.7"
hyper               = "0.14"
lazy_static         = "1.4"
lib-common          = { git = "https://github.com/Arrow-air/lib-common.git", tag = "v0.1.1-develop.2" }
log                 = "0.4"
native-tls          = "0.2"
num-derive          = "0.3"
num-traits          = "0.2"
once_cell           = "1.16"
openssl             = "0.10"
ordered-float       = "3.3.0"
paste               = "1.0"
postgis             = "0.9"
postgres-native-tls = "0.5"
prost               = "0.11"
prost-types         = "0.11"
prost-wkt-types     = "0.4"
rand                = { version = "0.8", optional = true }
serde               = "1.0"
serde_json          = "1.0"
serde_yaml          = "0.9"
thiserror           = "1.0"
tokio               = { version = "1.28", features = ["full"] }
tokio-util          = "0.7"
tonic               = "0.8"
tonic-health        = "0.8"
uuid                = { version = "1.2", features = ["v4"] }

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[dependencies.postgres-types]
features = [
  "with-chrono-0_4",
  "with-uuid-1",
  "with-serde_json-1",
  "with-geo-types-0_7",
]
version = "0.2"

[dependencies.tokio-postgres]
features = ["with-uuid-1", "with-geo-types-0_7", "array-impls"]
version  = "0.7"

[dev-dependencies]
assert_matches = "1.4"
logtest        = "2.0"
rand           = "0.8"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

# Make sure we enable the required modules and have access to all resources when running tests
[dev-dependencies.svc-storage]
features = ["dev"]
path     = "."

[build-dependencies]
tonic-build = { version = "0.8", features = ["cleanup-markdown"] }
