[package]
description = "Aetheric storage service GRPC server"
keywords    = ["vtol", "server", "storage"]          # max 5
name        = "svc-storage"
version     = "0.12.1"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
default          = []
dev              = ["mock", "wkt"]
test_util        = ["mock", "stub_backends", "wkt"]
vendored-openssl = ["openssl/vendored"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = ["rand", "geo"]
# Will use a stubbed backend connection, only use for tests!
stub_backends = []
# Will implement stub functions for the server, only use for tests!
stub_server = ["test_util"]
# Only added to support client-grpc feature when running tests
stub_client = ["stub_backends"]

[dependencies]
anyhow              = "1.0"
byteorder           = "1.5"
bytes               = "1.7"
cargo-husky         = "1"
cfg-if              = "1.0"
clap                = { version = "4.5", features = ["derive"] }
config              = "0.14"
deadpool            = "0.12"
deadpool-postgres   = { version = "0.14", features = ["serde", "rt_tokio_1"] }
dotenv              = "0.15"
futures             = "0.3"
geo                 = { version = "0.28", optional = true }
hyper               = "1.4"
lazy_static         = "1.5"
log                 = "0.4"
native-tls          = "0.2"
num-derive          = "0.4"
num-traits          = "0.2"
once_cell           = "1.20"
openssl             = "0.10"
paste               = "1.0"
postgis             = "0.9"
postgres-native-tls = "0.5"
prost               = "0.13"
prost-types         = "0.13"
prost-wkt-types     = "0.6"
rand                = { version = "0.8", optional = true }
serde               = "1.0"
serde_json          = "1.0"
serde_yaml          = "0.9"
thiserror           = "1.0"
tokio               = { version = "1.40", features = ["full"] }
tokio-util          = "0.7"
tonic               = "0.12"
tonic-health        = "0.12"
wkt                 = { version = "0.11", optional = true }

[dependencies.lib-common]
git = "https://github.com/aetheric-oss/lib-common"
tag = "v3.0.0"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.3"

[dependencies.postgres-types]
features = [
  "with-chrono-0_4",
  "with-uuid-1",
  "with-serde_json-1",
  "with-geo-types-0_7",
]
version = "0.2"

[dependencies.tokio-postgres]
features = ["with-uuid-1", "with-geo-types-0_7", "array-impls"]
version  = "0.7"

[dev-dependencies]
assert_matches = "1.5"
ctor           = "0.2"
logtest        = "2.0"
rand           = "0.8"
regex          = "1.11"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

# Make sure we enable the required modules and have access to all resources when running tests
[dev-dependencies.svc-storage]
features = ["dev"]
path     = "."

[build-dependencies]
tonic-build = { version = "0.12", features = ["cleanup-markdown"] }

# https://github.com/xd009642/tarpaulin?tab=readme-ov-file#ignoring-code-in-files
# removes warnings introduced by rust 1.8
# can be removed when the cfg attributes can be replaced with `#[coverage(off)]` (currently only available in nightly)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
